<resources>
    <string name="app_name">Rent-A-Flat</string>

    <string name="common_error">Ошибка</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Отмена</string>
    <string name="common_yes">Да</string>
    <string name="common_no">Нет</string>
    <string name="common_edit">Редактировать</string>


    <string name="auth_login_hint">Имя</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_error">Неверный пароль</string>

    <string name="auth_logout">Выйти</string>
    <string name="auth_logout_message">Вы действительно хотите выйти?</string>

    <string name="flat_area">Площадь: %.1f м²</string>
    <string name="flat_price">Цена: %s ₽</string>
    <string name="flat_address">Адрес: %s</string>
    <string name="flat_room">Комнат: %s</string>
    <string name="flat_floor">Этаж: %s/%s</string>
    <string name="flat_price_pre_sqm">Цена за кв. м: %s ₽</string>

    <string name="edit_flat_area">Площадь</string>
    <string name="edit_flat_address">Адрес</string>
    <string name="edit_flat_rooms">Комнат</string>
    <string name="edit_flat_price">Цена, ₽</string>
    <string name="edit_flat_floor">Этаж</string>

    <string name="edit_flat_number_holder">%s</string>
    <string name="edit_flat_floor_holder">%s/%s</string>

    <string name="edit_flat_floor_error">Общее количество этажей должно быть больше этажа квартиры</string>
    <string name="edit_flat_floor_parse_error">Не удалось получить количество этажей</string>
    <string name="edit_flat_address_error">Адрес не может быть пустым</string>
    <string name="edit_flat_price_error">Цена не может быть равна нулю</string>
    <string name="edit_flat_area_error">Площадь не может быть равна нулю</string>
    <string name="edit_flat_rooms_error">Количество комнат не может быть равно нулю</string>
    <string name="edit_flat_empty_field">Поля не могут быть пустыми</string>
</resources>
